--- a/alarmClockFeature/src/main/res/layout/alarm_set_screen.xml
+++ b/alarmClockFeature/src/main/res/layout/alarm_set_screen.xml
@@ -81,13 +81,14 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_margin="8dp"
             android:text="@string/repeat"
             android:textAlignment="center" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:baselineAligned="false"
             android:orientation="horizontal">
 
@@ -165,7 +166,9 @@
         <include
             android:id="@+id/buttons"
             layout="@layout/cancel_ok"
-            android:layout_weight="1" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp" />
 
     </LinearLayout>
     </FrameLayout>
