--- a/playListDialogFeature/src/main/res/layout/playlist_dialog.xml
+++ b/playListDialogFeature/src/main/res/layout/playlist_dialog.xml
@@ -24,42 +24,36 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="8dp"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:visibility="visible">
+            android:orientation="horizontal">
 
             <FrameLayout
-                android:id="@+id/path_panel"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/button_space"
-                android:visibility="visible">
+                android:padding="2dp">
 
                 <EditText
                     android:id="@+id/playlistName"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
 
-                    android:layout_marginLeft="4dp"
                     android:text="@string/newPlaylist"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/green" />
             </FrameLayout>
 
             <FrameLayout
-                android:layout_width="match_parent"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:layout_weight="4"
                 android:background="@drawable/button_space">
 
                 <androidx.appcompat.widget.AppCompatImageButton
                     android:id="@+id/add_playlist_btn"
                     style="@style/buttonSingleLow"
-                    android:layout_width="match_parent"
                     android:background="@drawable/button_single"
                     app:srcCompat="@drawable/playlist_plus" />
             </FrameLayout>
@@ -68,7 +62,10 @@
 
         <include
             android:id="@+id/buttons"
-            layout="@layout/cancel_ok" />
+            layout="@layout/cancel_ok"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp" />
 
     </LinearLayout>
 
