--- a/trackdialogFeature/src/main/res/layout/track_dialog.xml
+++ b/trackdialogFeature/src/main/res/layout/track_dialog.xml
@@ -13,7 +13,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/panel_flat"
         android:orientation="vertical"
         android:padding="8dp">
 
@@ -21,51 +20,52 @@
             android:id="@+id/recyclerViewContainer"
             layout="@layout/dialog"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
         <LinearLayout
+            android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
 
             <FrameLayout
-                android:layout_width="wrap_content"
+                android:id="@+id/frameLayout2"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="3"
                 android:background="@drawable/button_space">
 
                 <CheckBox
                     android:id="@+id/network_btn"
                     style="@style/buttonSingleLow"
-                    android:layout_width="@dimen/button_Width_small"
-                    android:layout_height="@dimen/button_height_small"
                     android:background="@drawable/button_single"
                     android:button="@null"
                     android:checked="true"
                     android:foreground="@drawable/wan"
                     android:foregroundGravity="center"
                     android:foregroundTint="@color/tint_pressed_state_list" />
+
             </FrameLayout>
 
             <FrameLayout
-                android:id="@+id/path_panel"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="8dp"
-                android:layout_weight="4"
-                android:background="@drawable/button_space">
+                android:layout_weight="1"
+                android:background="@drawable/button_space"
+                android:padding="2dp">
 
                 <EditText
                     android:id="@+id/networkPath"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="8dp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/green"
+                    tools:text="hello"
                     tools:visibility="visible" />
             </FrameLayout>
 
@@ -75,7 +75,8 @@
             android:id="@+id/buttons"
             layout="@layout/cancel_ok"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp" />
 
     </LinearLayout>
 
