--- a/coreUI/src/main/res/values/colors.xml
+++ b/coreUI/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="white">#ffffff</color>
     <color name="light">#48484e</color>
     <color name="green">#4CAF50</color>
+    <color name="red">#FF0000</color>
 
     <color name="button_startColor">#222228</color>
     <color name="button_centerColor">#1c1c22</color>
